--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "application-name",
   "version": "0.0.1",
   "private": true,
-  "scripts": {
-    "start": "node ./bin/www"
-  },
+  // "scripts": {
+  //   "start": "node ./bin/www"
+  // },
   "dependencies": {
     "express": "~3.4.8",
     "static-favicon": "~1.0.0",
